<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="match_parent"
    android:background="@drawable/card_round_end"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/are_you_sure_you_want_to_logout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/normal_button_with_six_radius_grey_color"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/attention_button_red_corner"
            android:text="@string/logout"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>