<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/home_background"
            android:padding="10dp"
            tools:context=".fragments.dashBoard.HomeFragment">

            <LinearLayout
                android:id="@+id/textLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/welcomeText"
                    style="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_only"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/nameText"
                    style="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="John"
                    android:textAllCaps="true"
                    android:textColor="@color/app_primary"
                    android:textSize="22dp" />
            </LinearLayout>
            <GridView
                android:id="@+id/homeGridView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:horizontalSpacing="20dp"
                android:numColumns="2"
                android:verticalSpacing="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLinearLayout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_fragment_end_element"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/quot_you_can_meke_money_or_you_can_make_excuses_which_do_you_prefer_quot"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_medium"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/by_tom_ferry"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_medium">

                </TextView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>